--- a/src/css/transcribe.css
+++ b/src/css/transcribe.css
@@ -1,3 +1,24 @@
 .editor {
     border-right:3px #eee solid;
 }
+
+#editor {
+    position: relative;
+}
+
+.container{
+    margin-left: 0px;
+    margin-right: -30px;
+    width: 100%;
+}
+
+.ace_editor {
+    border: 1px solid lightgray;
+    margin: auto;
+    height: 200px;
+    width: 98%;
+}
+.scrollmargin {
+    height: 80px;
+    text-align: center;
+}
