Added Openlayers 3 Picture Display with panning and zoom function
- Polygons can't be drawn yet
- Viewport gets squashed upon resize
- Current mock-up button updates the viewport

--- a/src/css/transcribe.css
+++ b/src/css/transcribe.css
@@ -22,3 +22,18 @@
     height: 80px;
     text-align: center;
 }
+
+.img-rounded{
+    border-radius: 10px;
+}
+
+.map{
+    height: 600px;
+}
+.draw-polygon {
+    top: 65px;
+    left: .5em;
+}
+.ol-touch .draw-polygon {
+    top: 80px;
+}
