Added several bootbox modal prompts plus a reset button for the transcribe view in openlayers.

--- a/src/css/transcribe.css
+++ b/src/css/transcribe.css
@@ -34,6 +34,10 @@
     top: 65px;
     left: .5em;
 }
-.ol-touch .draw-polygon {
+.reset-polygon{
+    top: 100px;
+    left: .5em;
+}
+.ol-touch .draw-polygon .reseet-polygon{
     top: 80px;
 }
